--- a/client/main.html
+++ b/client/main.html
@@ -2,6 +2,6 @@
   <title>test</title>
 </head>
 
-<body>
+<body style="margin:0;padding:0;width:350px;height:550px">
   <div id="render-target"></div>
 </body>
