--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
-<head>
-  <title>Gratiis</title>
-</head>
+<html>
+  <head>
+    <title>PkiPay</title>
+  </head>
 
-<body style="margin:0;padding:0;width:350px;height:600px">
-  <div id="render-target"></div>
-</body>
+  <body style="margin:0;padding:0;width:352px;height:600px;">
+    <div id="render-target"></div>
+  </body>
+</html>
