--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,7 @@
 <html>
   <head>
     <title>PkiPay &#x1F511;&#x1F4B5;</title>
+    <meta charset="UTF-8"/>
   </head>
 
   <body style="margin:0;padding:0;width:352px;height:600px;">
