--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
   </head>
 
-  <body style="margin:0;padding:0;width:360px;height:600px;overflow:hidden">
+  <body style="margin:0;padding:0;overflow:hidden">
     <div id="render-target"></div>
   </body>
 </html>
