--- a/public/index.html
+++ b/public/index.html
@@ -2,6 +2,7 @@
   <head>
     <title>PkiPay &#x1F511;&#x1F4B5;</title>
     <meta charset="UTF-8"/>
+    <link rel="shortcut icon" type="image/x-icon" href="icon16.png" />
   </head>
 
   <body style="margin:0;padding:0;overflow:hidden">
